# glut_boardgame

./: CMakeLists.txt  README.md
src/: board.h  boardgl.cpp  boardgl.h  game.cpp  gltools.cpp  gltools.h  piece.h
